# jack-client-template

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  jclient.c  jclient.h  utils.c  utils.h
